--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type":"module",
   "main": "dist/index.js",
   "bin": {
-    "clawdbot": "dist/entry.js"
+    "clawdbot": "dist/entry.js",
   },
   "files": [
     "dist/agents/**",
